<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/home"
        android:contentDescription="@string/home"
        android:title="@string/home"
        android:icon="@drawable/home_icon"
        />
    <item android:id="@+id/weather"
        android:contentDescription="@string/weather"
        android:title="@string/weather"
        android:icon="@drawable/weather_icon"
        />
    <item android:id="@+id/leaderboard"
        android:contentDescription="@string/leaderboard"
        android:title="@string/leaderboard"
        android:icon="@drawable/leaderboard_icon"
        />
    <item android:id="@+id/profile"
        android:contentDescription="@string/profile"
        android:title="@string/profile"
        android:icon="@drawable/profile_icon"
        />
</menu>