<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/weatherLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="321dp"
        android:layout_height="44dp"
        android:layout_marginTop="128dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/location_loading"
        android:textColor="@color/textBlack"
        android:textColorHint="@color/textBlack"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/weatherImageView"
        android:contentDescription="@string/desc_weather_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="3dp"
        android:gravity="center_vertical|center_horizontal"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/temperatureTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationTextView" />

    <TextView
        android:id="@+id/temperatureTextView"
        android:layout_width="122dp"
        android:layout_height="111dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/temperature"
        android:textColor="@color/textBlack"
        android:textColorHint="@color/textBlack"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weatherImageView" />

    <TextView
        android:id="@+id/weatherDescriptionTextView"
        android:layout_width="355dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/loading_weather"
        android:textColor="@color/textBlack"
        android:textColorHint="@color/textBlack"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureTextView"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>