<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal|start|center_vertical"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_trash"
                android:contentDescription="@string/desc_icon"
                android:layout_width="120dp"
                android:layout_height="50dp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/txt_trash"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/txt_trash_name"
                android:textAlignment="center"
                android:textColor="@color/textBlack"
                android:textSize="18sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/value_trash"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:gravity="center"
                android:text="@string/default_value_trash"
                android:textColor="@color/textBlack"
                android:textColorHint="@android:color/tertiary_text_light"
                android:textSize="18sp"
                tools:text="@string/default_value_trash" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>